# Shared_control_architecture

./: README.md  Roba da lanciare  frame_plotter.py
OLD_arbitration/: CMakeLists.txt  package.xml
SC_navigation/: CMakeLists.txt  package.xml  setup.py
SC_navigation/config/: navigation_params.yaml
SC_navigation/launch/: start_teleop.launch  start_teleop_arm.launch  start_teleop_base.launch  start_testing.launch  start_training.launch
SC_navigation/output/: plotter.py
arbitration/: CMakeLists.txt  package.xml  setup.py
arbitration/scripts/: arbitrator.py
arbitration/src/arbitration/: utils.py
arbitration/src/scripts/: arbitrator.py
arbitration/src/utils/: environment.py  laser_scanner.py  utils.py
arm_control/: CMakeLists.txt  package.xml  setup.py
arm_control/launch/: start_teleop_arm.launch
auto_controller/: CMakeLists.txt  package.xml  setup.py
autonomous_controllers/: CMakeLists.txt  package.xml  setup.py
autonomous_controllers/scripts/: collision_avoider.py  read_sensors.py  trajectory_smoother.py
autonomous_controllers/src/: utils.py
direct_control/: CMakeLists.txt  package.xml  setup.py
gazebo_sim/: CMakeLists.txt  package.xml
gazebo_sim/launch/: tiago_gazebo.launch
gazebo_sim/worlds/: 10_humans_new.world  10_humans_vel05.world  15_humans.world  5_humans.world  bottleneck.world  (+18 more)
good weights/: q_network.pkl
plots/: frame_plotter.py  plotter.py
trash/: arbitrator.py  collision_avoidance.py  trajectory_smoother.py
user_nodes/: CMakeLists.txt  package.xml  setup.py
user_pkg/: CMakeLists.txt  package.xml  setup.py
(+5025 files in other folders)
